# fplayer-ff-desktop

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
3rd/ffmpeg_v8.0.1/lib/msvc-64/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
3rd/ffmpeg_v8.1/lib/gcc-lib64/: libavcodec.so.62  libavdevice.so.62  libavdevice.so.62.4.100  libavfilter.so.11  libavformat.so.62.13.102  libavutil.so.60  libavutil.so.60.30.100  libswresample.so.6.4.100  libswscale.so.9  libswscale.so.9.7.100
api/: CMakeLists.txt  README.md
api/include/fplayer/api/: export.h
api/include/fplayer/api/media/: icamera.h  ifvideoview.h  iplayer.h  iscreencapture.h  mediabackendtype.h  previewtarget.h
api/include/fplayer/api/net/: istream.h
api/src/: icamera.cpp  ifvideoview.cpp  iplayer.cpp  iscreencapture.cpp  istream.cpp
app/: CMakeLists.txt  main.cpp
backend/: CMakeLists.txt  README.md
backend/desktopcapture_dxgi/: CMakeLists.txt
backend/desktopcapture_dxgi/include/fplayer/backend/desktopcapture_dxgi/: export.h  screencapturedxgi.h
backend/desktopcapture_dxgi/src/: screencapturedxgi.cpp
backend/media_ffmpeg/: CMakeLists.txt
backend/media_ffmpeg/include/fplayer/backend/media_ffmpeg/: cameraffmpeg.h  camerainfofetcher.h  export.h  playerffmpeg.h  screencaptureffmpeg.h
backend/media_ffmpeg/src/: cameraffmpeg.cpp  camerainfofetcher.cpp  playerffmpeg.cpp  screencaptureffmpeg.cpp
backend/media_qt6/: CMakeLists.txt
backend/media_qt6/include/fplayer/backend/media_qt6/: cameraqt6.h  export.h  playerqt6.h  screencaptureqt6.h
backend/media_qt6/src/: cameraqt6.cpp  playerqt6.cpp  screencaptureqt6.cpp
backend/net_ffmpeg/: CMakeLists.txt
backend/net_ffmpeg/include/fplayer/backend/net_ffmpeg/: export.h  streamffmpeg.h
backend/net_ffmpeg/src/: streamffmpeg.cpp
backend/net_qt6/: CMakeLists.txt
backend/net_qt6/include/fplayer/backend/net_qt6/: export.h  streamqt6.h
backend/net_qt6/src/: streamqt6.cpp
backend/stream_ffmpeg/: CMakeLists.txt
backend/stream_ffmpeg/include/fplayer/backend/stream_ffmpeg/: export.h  streamffmpeg.h
backend/stream_ffmpeg/src/: audio_pipeline.cpp  audio_pipeline.h  streamffmpeg.cpp  streamffmpeg_helpers.cpp  streamffmpeg_helpers.h
backend/stream_ffmpeg/src/platform/: audioinputprobe.cpp  audioinputprobe.h
backend/stream_ffmpeg/src/platform/linux/: audioinputprobe_linux.cpp  audioinputprobe_linux.h
backend/stream_ffmpeg/src/platform/windows/: audioinputprobe.cpp  audioinputprobe.h  wasapiloopbackcapture.cpp  wasapiloopbackcapture.h
backend/test_ffmpeg/: CMakeLists.txt  main.cpp
cmake/: 3rd.cmake  CPM.cmake  global_template.h.in  utils.cmake
common/: CMakeLists.txt
common/include/fplayer/common/: export.h
common/include/fplayer/common/cameraframebus/: cameraframebus.h
common/include/fplayer/common/fglwidget/: fglwidget.h
common/include/fplayer/common/maplist/: maplist.hpp
common/include/fplayer/common/qtloggeradapter/: qtloggeradapter.h
common/include/fplayer/common/screenframebus/: screenframebus.h
common/src/: cameraframebus.cpp  fglwidget.cpp  qtloggeradapter.cpp  screenframebus.cpp
doc/: backend-media-file-playback-开发详解.md  bug记录.md  ffmpeg-camera-backend-opengl-playback-guide.md  ffmpeg-camera-qt-opengl-guide-visual.md  file-playback-architecture-and-evolution.md  windows-audio-backend-开发说明.md  《后端拆解方案》.md  屏幕捕获模式-设计与拆分说明.md  推拉流-使用说明.md  推拉流-开发文档.md  毕业设计-应用价值与场景分析.md  论文-项目技术重点与难点综述.md
doc/problems/api/: 头文件声明析构函数cpp实现为default会构建警告.md
doc/problems/ffmpeg/: 项目bin目录下ffmpeg的库怎么存在两份.md
doc/problems/qt6/: MinGW-debug模式下编译无法通过.md  Qt6无法拿到部分虚拟摄像头.md
runtime/: CMakeLists.txt  READEME.md
runtime/include/fplayer/runtime/: export.h  runtime.h
runtime/src/: runtime.cpp
service/: CMakeLists.txt  README.md
service/include/fplayer/service/: export.h  service.h
service/src/: service.cpp
widget/: CMakeLists.txt  README.md
widget/include/fplayer/widget/: capturewindow.h  export.h  fvideoview.h
widget/res/: res.qrc
widget/src/: capturewindow.cpp  fvideoview.cpp
widget/uis/: capturewindow.ui
